--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
-    "karma-chrome-launcher": "^0.1.12",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "^0.2.2",
+    "karma-chrome-launcher": "~0.1.12",
+    "karma-firefox-launcher": "~0.1.6",
+    "karma-phantomjs-launcher": "~0.2.1",
+    "karma-jasmine": "~0.3.5",
+    "karma-junit-reporter": "~0.2.2",
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6",
-    "connect-livereload": "~0.4.0"
+    "connect-livereload": "~0.4.0",
+    "jasmine-node": "~1.14.5",
+    "should": "~7.1.0"
   },
   "dependencies": {
     "express": "~4.9.0",
@@ -32,7 +35,12 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "stylus": "0.42.3",
-    "errorhandler": "~1.0.0"
+    "errorhandler": "~1.0.0",
+    "passport": "~0.3.0",
+    "passport-local": "~0.1.6",
+    "jsonwebtoken": "~5.0.5",
+    "express-jwt": "~3.0.1",
+    "composable-middleware": "^0.3.0"
   },
   "scripts": {
     "postinstall": "bower install",
@@ -43,6 +51,9 @@
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js  --single-run",
+
+    "preunittest": "npm install",
+    "unittest": "jasmine-node server/specs",
 
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
