--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "mongoose": "~4.1.3",
+    "mongoose-nested": "~4.1.3",
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
